# movies-model-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  data_analysis.ipynb  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  http_logging.py  main.py
app/dto/: __init__.py  list_dto.py  predict_dto.py  train_dto.py
app/services/: __init__.py  data_analysis.py  data_pipeline.py  estimators.py  ml_core.py  mlflow_integration.py  registry.py
postman/: ML_API.postman_collection.json
scripts/: csv_to_parquet.py
